--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/champix56/FAN_2020_07_20#readme",
   "dependencies": {
+    "angular": "^1.8.0",
     "lite-server": "^2.5.4"
   }
 }
