--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "cours Orsys Angularjs",
   "main": "index.js",
   "scripts": {
-    "start": "lite-server"
+    "start": "lite-server",
+    "start-json":"json-server -p 5635 db/db.json"
   },
   "repository": {
     "type": "git",
